namespace SokoHub.Domain.Modules.Vendors;

public class VendorCommission
{
}
