namespace SokoHub.Domain.Modules.Vendors;

public class VendorSettlement
{
}
